first try - not working
update

finished unit tests, DONE

forgot config.js update

changed name to example.coffee and compressed code

made toBe's consistent

Delete npm-debug.log

Update linked-list_test.spec.coffee

--- a/config.json
+++ b/config.json
@@ -20,7 +20,8 @@
     "wordy",
     "clock",
     "beer-song",
-    "atbash-cipher"
+    "atbash-cipher",
+    "linked-list"
   ],
   "deprecated": [
 
