Added Pascals Triangles xcoffeescript

--- a/config.json
+++ b/config.json
@@ -21,7 +21,8 @@
     "clock",
     "beer-song",
     "atbash-cipher",
-    "linked-list"
+    "linked-list",
+    "pascals-triangle"
   ],
   "deprecated": [
 
