nucleotides test and example in coffeescript

--- a/config.json
+++ b/config.json
@@ -22,7 +22,8 @@
     "beer-song",
     "atbash-cipher",
     "linked-list",
-    "pascals-triangle"
+    "pascals-triangle",
+    "nucleotide-count"
   ],
   "deprecated": [
 
