--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "repository": "https://github.com/exercism/xcoffeescript",
   "active": true,
   "problems": [
+    "hello-world",
     "bob",
     "word-count",
     "accumulate",
