[v3] Add version property to config.json

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "language": "CoffeeScript",
   "active": true,
   "blurb": "CoffeeScript is a language that compiles into JavaScript. It uses an alternative syntax to the Java-like syntax of JavaScript, and is one of many new transpiled languages used in web development.",
+  "version": 3,
   "test_pattern": "spec.coffee",
   "exercises": [
     {
