[v3] Add name property to practice exercises in config.json

--- a/config.json
+++ b/config.json
@@ -18,6 +18,7 @@
   "exercises": [
     {
       "slug": "hello-world",
+      "name": "Hello World",
       "uuid": "0d1ce0cd-f7f2-4843-82ac-b0b4d995fa16",
       "difficulty": 1,
       "topics": [
@@ -29,6 +30,7 @@
     },
     {
       "slug": "queen-attack",
+      "name": "Queen Attack",
       "uuid": "563c81d1-8673-41b8-8302-15f7edb22321",
       "difficulty": 1,
       "topics": [
@@ -40,6 +42,7 @@
     },
     {
       "slug": "anagram",
+      "name": "Anagram",
       "uuid": "22fe2f9c-71af-4ce0-b3cb-690a93654fe6",
       "difficulty": 2,
       "topics": [
@@ -50,6 +53,7 @@
     },
     {
       "slug": "beer-song",
+      "name": "Beer Song",
       "uuid": "3256e251-89ab-4a48-91a4-b4d314b77bec",
       "difficulty": 2,
       "topics": [
@@ -60,6 +64,7 @@
     },
     {
       "slug": "binary",
+      "name": "Binary",
       "uuid": "414dcffe-029a-4558-aabe-d933cd148abf",
       "difficulty": 2,
       "topics": [
@@ -70,6 +75,7 @@
     },
     {
       "slug": "luhn",
+      "name": "Luhn",
       "uuid": "85c6c117-0173-4a1a-ae33-86427d6512dd",
       "difficulty": 2,
       "topics": [
@@ -81,6 +87,7 @@
     },
     {
       "slug": "nucleotide-count",
+      "name": "Nucleotide Count",
       "uuid": "6952588f-22fb-493e-b252-d62c404ad9ca",
       "difficulty": 2,
       "topics": [
@@ -91,6 +98,7 @@
     },
     {
       "slug": "palindrome-products",
+      "name": "Palindrome Products",
       "uuid": "803690cc-a7cc-4c2f-b767-4c14a399f13a",
       "difficulty": 2,
       "topics": [
@@ -101,6 +109,7 @@
     },
     {
       "slug": "pascals-triangle",
+      "name": "Pascals Triangle",
       "uuid": "ee80988f-f1df-4958-b164-0e7fba9d1305",
       "difficulty": 2,
       "topics": [
@@ -112,6 +121,7 @@
     },
     {
       "slug": "triangle",
+      "name": "Triangle",
       "uuid": "42292f42-ccfe-4103-a6f3-a057bca32c49",
       "difficulty": 2,
       "topics": [
@@ -121,6 +131,7 @@
     },
     {
       "slug": "accumulate",
+      "name": "Accumulate",
       "uuid": "b4670a87-1436-4e83-a641-76a6ec00fab8",
       "difficulty": 3,
       "topics": [
@@ -131,6 +142,7 @@
     },
     {
       "slug": "clock",
+      "name": "Clock",
       "uuid": "4b3977e2-0e32-49ac-b3df-5c1d2600c079",
       "difficulty": 3,
       "topics": [
@@ -141,6 +153,7 @@
     },
     {
       "slug": "hexadecimal",
+      "name": "Hexadecimal",
       "uuid": "bad8f00c-a480-4cf9-8939-2ec45f59ff42",
       "difficulty": 3,
       "topics": [
@@ -151,6 +164,7 @@
     },
     {
       "slug": "linked-list",
+      "name": "Linked List",
       "uuid": "34661cc2-6d88-4e36-8c3e-87744be307ef",
       "difficulty": 3,
       "topics": [
@@ -162,6 +176,7 @@
     },
     {
       "slug": "trinary",
+      "name": "Trinary",
       "uuid": "3b225ecc-1321-476d-8aa7-db352f952c61",
       "difficulty": 3,
       "topics": [
@@ -172,6 +187,7 @@
     },
     {
       "slug": "word-count",
+      "name": "Word Count",
       "uuid": "e80080ca-04a9-40b5-affe-88f1d617dc97",
       "difficulty": 3,
       "topics": [
@@ -184,6 +200,7 @@
     },
     {
       "slug": "nth-prime",
+      "name": "Nth Prime",
       "uuid": "df9e580c-3a05-4d6c-b0d0-375df3af4d6c",
       "difficulty": 4,
       "topics": [
@@ -196,6 +213,7 @@
     },
     {
       "slug": "wordy",
+      "name": "Wordy",
       "uuid": "86826aa0-f4b0-444c-a5c9-287a6590027e",
       "difficulty": 4,
       "topics": [
@@ -207,6 +225,7 @@
     },
     {
       "slug": "atbash-cipher",
+      "name": "Atbash Cipher",
       "uuid": "a38d0644-42b5-4f01-b110-b723be1fa8a1",
       "difficulty": 5,
       "topics": [
@@ -218,6 +237,7 @@
     },
     {
       "slug": "binary-search-tree",
+      "name": "Binary Search Tree",
       "uuid": "bf14de70-e231-48a1-b208-2d54d3398171",
       "difficulty": 5,
       "topics": [
@@ -229,6 +249,7 @@
     },
     {
       "slug": "bob",
+      "name": "Bob",
       "uuid": "a8e713a1-e8b9-48b2-b20d-7121b0ecf6c0",
       "difficulty": 5,
       "topics": [
