--- a/config.json
+++ b/config.json
@@ -15,269 +15,271 @@
     "indent_size": 4
   },
   "test_pattern": "spec.coffee",
-  "exercises": [
-    {
-      "slug": "hello-world",
-      "name": "Hello World",
-      "uuid": "0d1ce0cd-f7f2-4843-82ac-b0b4d995fa16",
-      "prerequisites": [],
-      "difficulty": 1,
-      "topics": [
-        "conditionals",
-        "control_flow_if_statements",
-        "optional_values",
-        "text_formatting"
-      ]
-    },
-    {
-      "slug": "queen-attack",
-      "name": "Queen Attack",
-      "uuid": "563c81d1-8673-41b8-8302-15f7edb22321",
-      "prerequisites": [],
-      "difficulty": 1,
-      "topics": [
-        "algorithms",
-        "arrays",
-        "games",
-        "logic"
-      ]
-    },
-    {
-      "slug": "anagram",
-      "name": "Anagram",
-      "uuid": "22fe2f9c-71af-4ce0-b3cb-690a93654fe6",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "sorting",
-        "strings",
-        "text_formatting"
-      ]
-    },
-    {
-      "slug": "beer-song",
-      "name": "Beer Song",
-      "uuid": "3256e251-89ab-4a48-91a4-b4d314b77bec",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "control_flow_switch",
-        "loops",
-        "text_formatting"
-      ]
-    },
-    {
-      "slug": "binary",
-      "name": "Binary",
-      "uuid": "414dcffe-029a-4558-aabe-d933cd148abf",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "integers",
-        "math",
-        "transforming"
-      ]
-    },
-    {
-      "slug": "luhn",
-      "name": "Luhn",
-      "uuid": "85c6c117-0173-4a1a-ae33-86427d6512dd",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "algorithms",
-        "arrays",
-        "integers",
-        "pattern_recognition"
-      ]
-    },
-    {
-      "slug": "nucleotide-count",
-      "name": "Nucleotide Count",
-      "uuid": "6952588f-22fb-493e-b252-d62c404ad9ca",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "filtering",
-        "maps",
-        "strings"
-      ]
-    },
-    {
-      "slug": "palindrome-products",
-      "name": "Palindrome Products",
-      "uuid": "803690cc-a7cc-4c2f-b767-4c14a399f13a",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "arrays",
-        "integers",
-        "math"
-      ]
-    },
-    {
-      "slug": "pascals-triangle",
-      "name": "Pascals Triangle",
-      "uuid": "ee80988f-f1df-4958-b164-0e7fba9d1305",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "algorithms",
-        "arrays",
-        "integers",
-        "math"
-      ]
-    },
-    {
-      "slug": "triangle",
-      "name": "Triangle",
-      "uuid": "42292f42-ccfe-4103-a6f3-a057bca32c49",
-      "prerequisites": [],
-      "difficulty": 2,
-      "topics": [
-        "arrays",
-        "equality"
-      ]
-    },
-    {
-      "slug": "accumulate",
-      "name": "Accumulate",
-      "uuid": "b4670a87-1436-4e83-a641-76a6ec00fab8",
-      "prerequisites": [],
-      "difficulty": 3,
-      "topics": [
-        "arrays",
-        "maps",
-        "transforming"
-      ]
-    },
-    {
-      "slug": "clock",
-      "name": "Clock",
-      "uuid": "4b3977e2-0e32-49ac-b3df-5c1d2600c079",
-      "prerequisites": [],
-      "difficulty": 3,
-      "topics": [
-        "integers",
-        "loops",
-        "text_formatting"
-      ]
-    },
-    {
-      "slug": "hexadecimal",
-      "name": "Hexadecimal",
-      "uuid": "bad8f00c-a480-4cf9-8939-2ec45f59ff42",
-      "prerequisites": [],
-      "difficulty": 3,
-      "topics": [
-        "integers",
-        "math",
-        "transforming"
-      ]
-    },
-    {
-      "slug": "linked-list",
-      "name": "Linked List",
-      "uuid": "34661cc2-6d88-4e36-8c3e-87744be307ef",
-      "prerequisites": [],
-      "difficulty": 3,
-      "topics": [
-        "algorithms",
-        "classes",
-        "object_oriented_programming",
-        "variables"
-      ]
-    },
-    {
-      "slug": "trinary",
-      "name": "Trinary",
-      "uuid": "3b225ecc-1321-476d-8aa7-db352f952c61",
-      "prerequisites": [],
-      "difficulty": 3,
-      "topics": [
-        "integers",
-        "math",
-        "transforming"
-      ]
-    },
-    {
-      "slug": "word-count",
-      "name": "Word Count",
-      "uuid": "e80080ca-04a9-40b5-affe-88f1d617dc97",
-      "prerequisites": [],
-      "difficulty": 3,
-      "topics": [
-        "maps",
-        "strings",
-        "text_formatting",
-        "transforming",
-        "variables"
-      ]
-    },
-    {
-      "slug": "nth-prime",
-      "name": "Nth Prime",
-      "uuid": "df9e580c-3a05-4d6c-b0d0-375df3af4d6c",
-      "prerequisites": [],
-      "difficulty": 4,
-      "topics": [
-        "arrays",
-        "filter",
-        "loops",
-        "map",
-        "math"
-      ]
-    },
-    {
-      "slug": "wordy",
-      "name": "Wordy",
-      "uuid": "86826aa0-f4b0-444c-a5c9-287a6590027e",
-      "prerequisites": [],
-      "difficulty": 4,
-      "topics": [
-        "integers",
-        "pattern_recognition",
-        "regular_expressions",
-        "strings"
-      ]
-    },
-    {
-      "slug": "atbash-cipher",
-      "name": "Atbash Cipher",
-      "uuid": "a38d0644-42b5-4f01-b110-b723be1fa8a1",
-      "prerequisites": [],
-      "difficulty": 5,
-      "topics": [
-        "arrays",
-        "cryptography",
-        "strings",
-        "text_formatting"
-      ]
-    },
-    {
-      "slug": "binary-search-tree",
-      "name": "Binary Search Tree",
-      "uuid": "bf14de70-e231-48a1-b208-2d54d3398171",
-      "prerequisites": [],
-      "difficulty": 5,
-      "topics": [
-        "algorithms",
-        "arrays",
-        "integers",
-        "trees"
-      ]
-    },
-    {
-      "slug": "bob",
-      "name": "Bob",
-      "uuid": "a8e713a1-e8b9-48b2-b20d-7121b0ecf6c0",
-      "prerequisites": [],
-      "difficulty": 5,
-      "topics": [
-        "conditionals",
-        "control_flow_switch",
-        "text_formatting"
-      ]
-    }
-  ]
+  "exercises": {
+    "practice": [
+      {
+        "slug": "hello-world",
+        "name": "Hello World",
+        "uuid": "0d1ce0cd-f7f2-4843-82ac-b0b4d995fa16",
+        "prerequisites": [],
+        "difficulty": 1,
+        "topics": [
+          "conditionals",
+          "control_flow_if_statements",
+          "optional_values",
+          "text_formatting"
+        ]
+      },
+      {
+        "slug": "queen-attack",
+        "name": "Queen Attack",
+        "uuid": "563c81d1-8673-41b8-8302-15f7edb22321",
+        "prerequisites": [],
+        "difficulty": 1,
+        "topics": [
+          "algorithms",
+          "arrays",
+          "games",
+          "logic"
+        ]
+      },
+      {
+        "slug": "anagram",
+        "name": "Anagram",
+        "uuid": "22fe2f9c-71af-4ce0-b3cb-690a93654fe6",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "sorting",
+          "strings",
+          "text_formatting"
+        ]
+      },
+      {
+        "slug": "beer-song",
+        "name": "Beer Song",
+        "uuid": "3256e251-89ab-4a48-91a4-b4d314b77bec",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "control_flow_switch",
+          "loops",
+          "text_formatting"
+        ]
+      },
+      {
+        "slug": "binary",
+        "name": "Binary",
+        "uuid": "414dcffe-029a-4558-aabe-d933cd148abf",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "integers",
+          "math",
+          "transforming"
+        ]
+      },
+      {
+        "slug": "luhn",
+        "name": "Luhn",
+        "uuid": "85c6c117-0173-4a1a-ae33-86427d6512dd",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "algorithms",
+          "arrays",
+          "integers",
+          "pattern_recognition"
+        ]
+      },
+      {
+        "slug": "nucleotide-count",
+        "name": "Nucleotide Count",
+        "uuid": "6952588f-22fb-493e-b252-d62c404ad9ca",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "filtering",
+          "maps",
+          "strings"
+        ]
+      },
+      {
+        "slug": "palindrome-products",
+        "name": "Palindrome Products",
+        "uuid": "803690cc-a7cc-4c2f-b767-4c14a399f13a",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "arrays",
+          "integers",
+          "math"
+        ]
+      },
+      {
+        "slug": "pascals-triangle",
+        "name": "Pascals Triangle",
+        "uuid": "ee80988f-f1df-4958-b164-0e7fba9d1305",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "algorithms",
+          "arrays",
+          "integers",
+          "math"
+        ]
+      },
+      {
+        "slug": "triangle",
+        "name": "Triangle",
+        "uuid": "42292f42-ccfe-4103-a6f3-a057bca32c49",
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "arrays",
+          "equality"
+        ]
+      },
+      {
+        "slug": "accumulate",
+        "name": "Accumulate",
+        "uuid": "b4670a87-1436-4e83-a641-76a6ec00fab8",
+        "prerequisites": [],
+        "difficulty": 3,
+        "topics": [
+          "arrays",
+          "maps",
+          "transforming"
+        ]
+      },
+      {
+        "slug": "clock",
+        "name": "Clock",
+        "uuid": "4b3977e2-0e32-49ac-b3df-5c1d2600c079",
+        "prerequisites": [],
+        "difficulty": 3,
+        "topics": [
+          "integers",
+          "loops",
+          "text_formatting"
+        ]
+      },
+      {
+        "slug": "hexadecimal",
+        "name": "Hexadecimal",
+        "uuid": "bad8f00c-a480-4cf9-8939-2ec45f59ff42",
+        "prerequisites": [],
+        "difficulty": 3,
+        "topics": [
+          "integers",
+          "math",
+          "transforming"
+        ]
+      },
+      {
+        "slug": "linked-list",
+        "name": "Linked List",
+        "uuid": "34661cc2-6d88-4e36-8c3e-87744be307ef",
+        "prerequisites": [],
+        "difficulty": 3,
+        "topics": [
+          "algorithms",
+          "classes",
+          "object_oriented_programming",
+          "variables"
+        ]
+      },
+      {
+        "slug": "trinary",
+        "name": "Trinary",
+        "uuid": "3b225ecc-1321-476d-8aa7-db352f952c61",
+        "prerequisites": [],
+        "difficulty": 3,
+        "topics": [
+          "integers",
+          "math",
+          "transforming"
+        ]
+      },
+      {
+        "slug": "word-count",
+        "name": "Word Count",
+        "uuid": "e80080ca-04a9-40b5-affe-88f1d617dc97",
+        "prerequisites": [],
+        "difficulty": 3,
+        "topics": [
+          "maps",
+          "strings",
+          "text_formatting",
+          "transforming",
+          "variables"
+        ]
+      },
+      {
+        "slug": "nth-prime",
+        "name": "Nth Prime",
+        "uuid": "df9e580c-3a05-4d6c-b0d0-375df3af4d6c",
+        "prerequisites": [],
+        "difficulty": 4,
+        "topics": [
+          "arrays",
+          "filter",
+          "loops",
+          "map",
+          "math"
+        ]
+      },
+      {
+        "slug": "wordy",
+        "name": "Wordy",
+        "uuid": "86826aa0-f4b0-444c-a5c9-287a6590027e",
+        "prerequisites": [],
+        "difficulty": 4,
+        "topics": [
+          "integers",
+          "pattern_recognition",
+          "regular_expressions",
+          "strings"
+        ]
+      },
+      {
+        "slug": "atbash-cipher",
+        "name": "Atbash Cipher",
+        "uuid": "a38d0644-42b5-4f01-b110-b723be1fa8a1",
+        "prerequisites": [],
+        "difficulty": 5,
+        "topics": [
+          "arrays",
+          "cryptography",
+          "strings",
+          "text_formatting"
+        ]
+      },
+      {
+        "slug": "binary-search-tree",
+        "name": "Binary Search Tree",
+        "uuid": "bf14de70-e231-48a1-b208-2d54d3398171",
+        "prerequisites": [],
+        "difficulty": 5,
+        "topics": [
+          "algorithms",
+          "arrays",
+          "integers",
+          "trees"
+        ]
+      },
+      {
+        "slug": "bob",
+        "name": "Bob",
+        "uuid": "a8e713a1-e8b9-48b2-b20d-7121b0ecf6c0",
+        "prerequisites": [],
+        "difficulty": 5,
+        "topics": [
+          "conditionals",
+          "control_flow_switch",
+          "text_formatting"
+        ]
+      }
+    ]
+  }
 }
