--- a/config.json
+++ b/config.json
@@ -15,6 +15,20 @@
     "indent_size": 4
   },
   "test_pattern": "spec.coffee",
+  "files": {
+    "solution": [
+      "%{kebab_slug}.coffee"
+    ],
+    "test": [
+      "%{kebab_slug}.spec.coffee"
+    ],
+    "example": [
+      "example.coffee"
+    ],
+    "exemplar": [
+      ".meta/exemplar.coffee"
+    ]
+  },
   "exercises": {
     "concept": [],
     "practice": [
