--- a/exercises/practice/palindrome-products/.meta/config.json
+++ b/exercises/practice/palindrome-products/.meta/config.json
@@ -1,6 +1,16 @@
 {
   "blurb": "Detect palindrome products in a given range.",
-  "authors": [],
+  "authors": [
+    "kytrinyx"
+  ],
+  "contributors": [
+    "aimorris",
+    "alxndr",
+    "fluxusfrequency",
+    "marocchino",
+    "meientau",
+    "rootulp"
+  ],
   "files": {
     "solution": [
       "palindrome-products.coffee"
