--- a/exercises/practice/luhn/.meta/config.json
+++ b/exercises/practice/luhn/.meta/config.json
@@ -7,7 +7,8 @@
     "alxndr",
     "marocchino",
     "meientau",
-    "rootulp"
+    "rootulp",
+    "meatball133"
   ],
   "files": {
     "solution": [
