Fix examplar and add tests

--- a/exercises/practice/palindrome-products/.meta/config.json
+++ b/exercises/practice/palindrome-products/.meta/config.json
@@ -8,7 +8,8 @@
     "fluxusfrequency",
     "marocchino",
     "meientau",
-    "rootulp"
+    "rootulp",
+    "meatball133"
   ],
   "files": {
     "solution": [
