update exercises batch 1

--- a/exercises/practice/anagram/.meta/config.json
+++ b/exercises/practice/anagram/.meta/config.json
@@ -6,7 +6,8 @@
     "aimorris",
     "kytrinyx",
     "markijbema",
-    "rootulp"
+    "rootulp",
+    "meatball133"
   ],
   "files": {
     "solution": [
