Update exercises batch 2

--- a/exercises/practice/word-count/.meta/config.json
+++ b/exercises/practice/word-count/.meta/config.json
@@ -5,7 +5,8 @@
   "contributors": [
     "aimorris",
     "kytrinyx",
-    "rootulp"
+    "rootulp",
+    "meatball133"
   ],
   "files": {
     "solution": [
